# open62541-interface

./: .jenkinsfile  CMakeLists.txt  FixForZeroSamplingInterval.patch  README.md  RemovePythonDependency.patch  SkipFirstHistoryEntry.patch  bugfix1.patch  bugfix2.patch  bugfix3.patch  bugfix4.patch  bugfix5.patch  bugfix6.patch  bugfix7.patch  cmakefile.patch  config.patch  connetionState.patch  fix_cmake_config.sh  open62541-config.in
cmake_config/: open62541Config.cmake  open62541Targets.cmake
